# vaultix

./: .editorconfig  .env.example  .gitignore  AI컨텐츠허브_기획안_v0.3.md  README.md  v0.3_정합성검증_환경충돌_보고서.md  구현시작_README.md  마스터프롬프트_코워크용.md  운영환경_정보수집_체크리스트.md
.github/: renovate.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init_users_assets.py  0002_add_auth_token_tables.py  0003_add_admin_review_tables.py  0004_add_generation_requests.py
apps/api/src/vaultix_api/: deps.py  main.py  settings.py
apps/api/src/vaultix_api/db/: __init__.py  base.py  session.py
apps/api/src/vaultix_api/models/: __init__.py  core.py
apps/api/src/vaultix_api/routers/: __init__.py  admin.py  assets.py  auth.py  downloads.py  meta.py  serializers.py
apps/api/src/vaultix_api/scripts/: run_generation_worker.py  seed_demo_data.py
apps/api/src/vaultix_api/services/: admins.py  download_tokens.py  email_delivery.py  email_domains.py  generation_worker.py  google_oauth.py  image_derivatives.py  openai_images.py  passwords.py  turnstile.py
apps/api/tests/: test_admin_api.py  test_auth_api.py  test_db_metadata.py  test_db_session.py  test_downloads_api.py  test_email_delivery.py  test_generation_worker.py  test_google_oauth.py  test_health.py  test_image_derivatives.py  test_openai_images.py  test_public_catalog_api.py  test_turnstile.py
docs/: ROADMAP.md
infra/: docker-compose.dev.yml  docker-compose.yml
기획서/: 00_IMPLEMENTATION_SPEC_v0.4.md  00_INDEX.md  00_확정사항_레지스트리.md  01_Phase0_기반셋업.md  02_Phase1_이미지MVP.md  (+16 more)
(+66 files in other folders)
